<resources>
    <string name="app_name">BRGPSApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="about_menu_text">About</string>
    <string name="pref_host_text">Host</string>
    <string name="pref_host_summary_text">Host for sending data</string>
    <string name="pref_scan_time_text">Scan Time</string>
    <string name="pref_scan_summary_text">Time window for checking for better position</string>
    <string name="app_version_string">v1.0</string>
    <string name="label_long">Longitude</string>
    <string name="label_lat">Latitude</string>
    <string name="value_double_0">0.000</string>
    <string name="label_epoch_time">Epoch Time</string>
    <string name="alititude_string">Alititude</string>
    <string name="accuracy_string">Accuracy</string>
    <string name="epoch_zero_string">0000000000</string>
    <string name="status_string">Status</string>
    <string name="status_text_string">Status info</string>
    <string name="error_no_privs">You do not have permission to access GPS. Please set app permissions.</string>
    <string name="text_speed">Speed</string>
    <string name="text_speed_accuracy">Spd. Acc.</string>
    <string name="title_networkstatus_text">Network</string>
    <string name="value_unknown">Unknown</string>
    <string name="title_Last_Serv_resp" >Serv Resp</string>
    <string name="value_connected">Connected</string>
    <string name="value_not_connected">Not Connected</string>

</resources>
